tests/invalid/function/generic_direct_call_lifetime_arg.facet
fn id<T>(x: affine T) -> affine T {
  x
}

fn bad<'a>(x: affine isize) -> affine isize {
  (id<'a> x)
}
